--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="./public/Annie's Birthday Invite.html"><h3>Come to my birthday party!</h3></h2></a>
         <img src="./assets/images/Annie's Birthday Invite.png",width="250",alt="screenshot of a birthday invite"/>
         <a href="./public/Annie's Favourite Movies.html"><h3>Discover my favourite movies!</h3></a>  
-        <img src="./assets/images/Annie's Movie Ranking.png",width="250",alt="screenshot of Annie's list of top 3 movies"/>
+        <img src="./assets/images/Annie's Movie Ranking.png",width="250"/>
     <hr />
         <h4><a href="./public/about.html">About Me</a></h4>
         <h4><a href="./public/contact.html">Contact Me</a></h4>
